# picodevfirmware

./: README.md
project000/: README.md
project000/antonio_almeida_embarcatech_HBr_2025_fase_1/: README.md
project000/antonio_almeida_embarcatech_HBr_2025_fase_1/blink_bdl/: CMakeLists.txt  blink_bdl.c
project000/antonio_almeida_embarcatech_HBr_2025_fase_1/button_buzzer_bdl/: button_buzzer_bdl.dis  button_buzzer_bdl.elf.map  button_buzzer_bdl.uf2
project000/antonio_almeida_embarcatech_HBr_2025_fase_1/ssd1306_bdl/: CMakeLists.txt
project000/antonio_almeida_embarcatech_HBr_2025_fase_1/ssd1306_oled_bdl teste/: CMakeLists.txt
project000/antonio_almeida_embarcatech_HBr_2025_fase_1/ssd1306_oled_bdl teste/include/: adc_setup.h  oled_setup.h
project000/antonio_almeida_embarcatech_HBr_2025_fase_1/ssd1306_oled_bdl teste/src/: adc_setup.c  oled_setup.c  ssd1306_oled_bdl.c
project000/antonio_almeida_embarcatech_HBr_2025_fase_1/ssd1306_oled_bdl_final/: README.md
project000/blink_rgb_bdl/: CMakeLists.txt  blink_rgb_bdl.c
project000/button_buzzer_bdl/: button_buzzer_bdl.elf  button_buzzer_bdl.hex
project000/buzzer_bdl/: CMakeLists.txt  buzzer_bdl.c
project000/dht22_bdl/: CMakeLists.txt
project000/dht22_bdl/include/: dht22.h
project000/dht22_bdl/src/: i2c_setup.c  main.c  oled_setup.c
project000/goertzel_bdl/: CMakeLists.txt
project000/ssd1306_oled_bdl teste/include/: i2c_setup.h  temperature.h
project000/ssd1306_oled_bdl teste/src/: i2c_setup.c  temperature.c
project000/ssd1306_oled_bdl_final/: README.md
project000/ssd1306_oled_bdl_final/include/: i2c_setup.h  temperature.h
project000/ssd1306_oled_bdl_final/src/: ssd1306_oled_bdl.c  temperature.c
project001/ssd1306_oled_copyright/: CMakeLists.txt  README.md
project001/ssd1306_oled_copyright/docs/: ~$ Entendendo Debounce por Tempo em Sistemas Digitais.docx  📘 Entendendo Debounce por Tempo em Sistemas Digitais.docx
project001/ssd1306_oled_copyright/include/: i2c_setup.h  oled_setup.h
project001/ssd1306_oled_copyright/src/: i2c_setup.c  oled_setup.c  ssd1306_oled_copyright.c
project002/ssd1306_oled__plus_plus_copyright/: CMakeLists.txt  README.md
project002/ssd1306_oled__plus_plus_copyright/include/: i2c_setup.h  oled_setup.h
project002/ssd1306_oled__plus_plus_copyright/src/: i2c_setup.c  main.cpp
project002/ssd1306_oled_copyright_plus/: CMakeLists.txt
project002/ssd1306_oled_copyright_plus/include/: ContadorApp.hpp
project002/ssd1306_oled_copyright_plus/src/: ContadorApp.cpp  main.cpp  oled_setup.c
project003/ssd1306_oled_joy_copyright/: CMakeLists.txt  README.md
project003/ssd1306_oled_joy_copyright/include/: adc_setup.h  i2c_setup.h  joystick.h  oled_setup.h
project003/ssd1306_oled_joy_copyright/src/: adc_setup.c  i2c_setup.c  joystick.c  oled_setup.c  ssd1306_oled_joy_copyright.c
project004/ssd1306_oled_joy_plus_plus_copyright/: CMakeLists.txt  README.md
project004/ssd1306_oled_joy_plus_plus_copyright/docs/: README.md
project004/ssd1306_oled_joy_plus_plus_copyright/include/: Adc_setup.hpp  I2c_setup.hpp  Joystick.hpp  Oled_setup.hpp
project004/ssd1306_oled_joy_plus_plus_copyright/src/: i2c_setup.cpp  joystick.cpp  main.cpp  oled_setup.cpp
project004/ssd1306_oled_temp_int_copyright/: CMakeLists.txt  README.md
project004/ssd1306_oled_temp_int_copyright/include/: temperature.h
project004/ssd1306_oled_temp_int_copyright/src/: adc_setup.c  i2c_setup.c  oled_setup.c  temperature.c
project005/ssd1306_oled_temp_int_copyright/: README.md
project005/ssd1306_oled_temp_int_copyright/include/: adc_setup.h  i2c_setup.h  oled_setup.h  temperature.h
project005/ssd1306_oled_temp_int_copyright/src/: ssd1306_oled_temp_int_copyright.c
project006/ssd1306_oled_temp_int_plus_plus_copyright/: CMakeLists.txt  README.md
project006/ssd1306_oled_temp_int_plus_plus_copyright/include/: I2c_setup.hpp  Oled_setup.hpp  Temperature.hpp
project006/ssd1306_oled_temp_int_plus_plus_copyright/src/: adc_setup.cpp  i2c_setup.cpp  main.cpp  oled_setup.cpp  temperature.cpp
project007/ssd1306_oled_simulador_galton_board/: CMakeLists.txt  README.md
project007/ssd1306_oled_simulador_galton_board_copyright/: CMakeLists.txt  README.md
project008/ssd1306_oled_simulador_galton_board_plus_plus_copyright/: CMakeLists.txt  README.md
project009/: README.md
project009/drivers/: led_embutido.c
project009/hal/: hal_led.c
project009/led_toggle/: CMakeLists.txt  README.md
project010/adc_convert/: CMakeLists.txt  README.md
project010/adc_convert/include/: adc.h
project010/adc_convert/src/: adc.c  adc_convert.c
project010/adc_convert/test/: test_adc.c
project011/: .env  README.md
project011/include/: lwipopts.h
project011/mqtt/: CMakeLists.txt  ENVIRONMENT_INSTRUCTIONS.md  README.md  setenv.sh
project011/mqtt/certs/: .gitignore
project011/mqtt/docs/: README.md
project011/mqtt/include/: bmp280_i2c_temp.h
project011/mqtt/src/: bmp280_i2c_temp.c  iot_security_lab.c
project011/src/: mqtt_client.c
project012/synthesize_audio_ac/: CMakeLists.txt  README.md
project012/synthesize_audio_ac/include/: audio_config.h  audio_playback.h  buttons_setup.h  capture_audio_setup.h  oled_setup.h  rgb_setup.h
project012/synthesize_audio_ac/src/: audio_playback.c  buttons_setup.c  capture_audio_setup.c  i2c_setup.c  main.c  oled_setup.c  rgb_setup.c
project013/synthesize_audio_plus_plus__copyright/: CMakeLists.txt  README.md
project013/synthesize_audio_plus_plus__copyright/include/: AudioConfig.hpp  AudioPlayback.hpp  ButtonManager.hpp  CaptureAudioSetup.hpp  I2cSetup.hpp  OledDisplay.hpp  RgbLed.hpp
project013/synthesize_audio_plus_plus__copyright/src/: AudioConfig.cpp  AudioPlayback.cpp  ButtonsManager.cpp  CaptureAudioSetup.cpp  I2cSetup.cpp  OledDisplay.cpp  RgbLed.cpp  main.cpp
project014/bdl_freertos_ac/: CMakeLists.txt  README.md
project015/ping_google_bdl_ac/: CMakeLists.txt  README.md
project015/ping_google_bdl_ac/include/: i2c_setup.h  oled_setup.h  ping.h
project015/ping_google_bdl_ac/src/: i2c_setup.c  oled_setup.c  picow_freertos_ping_ac.c  ping.c
(+24 files in other folders)
